syntax = "proto3";

option java_package = "dev.totallyspies.spydle.shared.proto";
option java_outer_classname = "GameMessages";

message ServerBoundMessage {
  oneof payload {
    ServerBoundJoinGame join_game = 1;
    ServerBoundStartGame start_game = 2;
    ServerBoundLeaveGame leave_game = 3;
    ServerBoundGuess guess = 4;
  }
}

// ServerBound messages
message ServerBoundJoinGame {
  string player_name = 1;
}

message ServerBoundStartGame {
}

message ServerBoundLeaveGame {
}

message ServerBoundGuess {
  string guessed_word = 1;
}

// ClientBound messages
message ClientBoundMessage {
  oneof payload {
    ClientBoundGameStart game_start = 1;
    ClientBoundGameEnd game_end = 2;
    ClientBoundUpdatePlayerList update_player_list = 3;
    ClientBoundTimerTick timer_tick = 4;
    ClientBoundGuessResult guess_result = 5;
    ClientBoundNewTurn new_turn = 6;
  }
}

message ClientBoundGameStart {
  repeated Player players = 1;
  int32 total_game_time_seconds = 2;
}

message ClientBoundGameEnd {
  Player winner = 1;
}

message ClientBoundUpdatePlayerList {
  repeated Player players = 1;
}

message ClientBoundTimerTick {
  int32 time_left_seconds = 1;
}

message ClientBoundGuessResult {
  bool result = 1;
}

message ClientBoundNewTurn {
  string assigned_string = 1;
  string current_player_name = 2;
}

// Player information for tracking in the game
message Player {
  string player_name = 1;
  int32 score = 2;
}
